# inverted_index

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: analyzers.rs  btree_map_ext.rs  coalesce.rs  document.rs  index.rs  lib.rs  postings.rs  query.rs  search.rs  search_result.rs  tokenizers.rs
src/index/: document.rs  index.rs  mod.rs  postings.rs  query.rs  search_result.rs
src/util/: btree_map_ext.rs  char_utf8.rs  coalesce.rs  mod.rs  successor.rs
